# website

./: .gitignore  Cargo.toml  build.rs
blog/: test_file.md
src/: main.rs
web/: blog.html  index.html  main.css  package-lock.json  package.json  tailwind.config.js  vite.config.js
